# S2-softwareEngineering-virtualProject

./: .gitignore  CMakeLists.txt  README.md
Database/: script.txt
Front-end GUI/: Password Manager.sln  Password Manager.vcxproj  Password Manager.vcxproj.filters
Front-end GUI/src/: BackendBridge.cpp  BackendBridge.h  Button.cpp  Button.h  PasswordEntry.h  ScrollBar.cpp  ScrollBar.h  main.cpp  ofApp.cpp  ofApp.h
include/password_manager_backend/: AdminService.hpp  AuditService.hpp  AuthService.hpp  CryptoService.hpp  MfaService.hpp  Models.hpp  MySqlRepositories.hpp  Repositories.hpp  SearchService.hpp  VaultService.hpp
src/: AdminService.cpp  AuditService.cpp  AuthService.cpp  CryptoService.cpp  MfaService.cpp  MySqlRepositories.cpp  SearchService.cpp  VaultService.cpp
tests/: backend_tests.cpp
tools/: PasswordManagerStandaloneLauncher.cs
